# easy_boot

./: .gitignore  CMakeLists.txt  CY000001_toolchain.cmake  build.sh  toolchain_cortexm3.cmake
arch/: CMakeLists.txt
arch/stm32f103xx/: CMakeLists.txt
arch/stm32f103xx/board/CY000001/: CMakeLists.txt  cpu_freq.c  stm32f1xx_it.c
arch/stm32f103xx/board/CY000001/gcc/: startup_stm32f103xe.s
arch/stm32f103xx/board/CY000001/include/: cpu_freq.h  stm32f1xx_hal_conf.h
arch/stm32f103xx/include/: stm32_nvic_conf.h
bsp/: CMakeLists.txt
bsp/CY000001/: CMakeLists.txt  bsp.c  bsp_flash.c  bsp_led.c  bsp_spiflash.c  bsp_uart.c  bsp_watchdog.c
bsp/CY000001/include/: bsp.h  bsp_flash.h  bsp_led.h  bsp_spiflash.h  bsp_uart.h  bsp_watchdog.h
components/: CMakeLists.txt
components/ymodem/: ymodem.c  ymodem_crc.c
components/ymodem/include/: ymodem.h  ymodem_crc.h
config/: assert.h  attributes.h  errorno.h  options.h
config/CY000001/: options.h
config/CY000001/gcc/: boot_CY000001.ld
driver/: CMakeLists.txt  device.c  user_serial.c  w25qxx.c
driver/include/: device.h  user_serial.h  w25qxx.h
lib/st/stm32f1xx/STM32F1xx_HAL_Driver/Src/: CMakeLists.txt
src/: CMakeLists.txt  download.c  firmware.c  main.c  platform.c  simplefifo.c  strategy.c
src/include/: download.h  firmware.h  platform.h  simplefifo.h  strategy.h
utils/: CMakeLists.txt  sl_crc.c  utils.c
utils/include/: sl_crc.h  utils.h
